# sony-camera-portal

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  cog.toml  go.mod  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
camera/: browse.go  camera.go  camera_test.go  discover.go
camera/testdata/: browse_result.xml
docs/: DEVELOPMENT.md
docs/prototype/: README.md
docs/prototype/go/: main.go  mock.go
docs/prototype/go/camera/: browse.go  camera_test.go  discover.go
docs/prototype/go/camera/testdata/: DmsDesc.xml  browse_response.xml
docs/prototype/go/server/: server_test.go
docs/prototype/rust-poc/: Cargo.toml
docs/prototype/rust-poc/src/: main.rs
openspec/: config.yaml
openspec/changes/add-photo-gallery-mvp/: design.md  proposal.md  tasks.md
openspec/changes/add-photo-gallery-mvp/specs/gallery-server/: spec.md
openspec/changes/add-photo-gallery-mvp/specs/web-gallery/: spec.md
openspec/changes/archive/2026-06-23-migrate-to-rust-product/: proposal.md  tasks.md
openspec/changes/archive/2026-06-25-add-photo-gallery-mvp/: README.md
openspec/changes/archive/2026-06-25-gallery-ui-rework/: proposal.md  tasks.md
openspec/changes/archive/2026-06-25-paginated-gallery/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-25-virtualize-gallery/: design.md  tasks.md
openspec/changes/backend-connection-robustness/: design.md  proposal.md  tasks.md
openspec/changes/backend-connection-robustness/specs/connection-manager/: spec.md
openspec/changes/gallery-ui-rework/: README.md  design.md  proposal.md  tasks.md
openspec/changes/migrate-to-rust-product/: README.md  design.md  proposal.md  tasks.md
openspec/changes/paginated-gallery/: design.md  proposal.md  tasks.md
openspec/changes/virtualize-gallery/: proposal.md
openspec/specs/connection-manager/: spec.md
openspec/specs/gallery-ui/: spec.md
openspec/specs/paginated-gallery/: spec.md
rust-poc/: Cargo.toml  README.md
rust-poc/src/: main.rs
scripts/: build.sh  capture-fixtures.sh  dev-stop.sh  dev.sh  fetch-sample-photos.sh  grab.py  grab.sh
server/: server.go
web/: index.html  vite.config.ts
web/src/: App.css  App.tsx
(+7 files in other folders)
