[workspace]
resolver = "2"
members = ["packages/camera", "packages/server", "packages/cli"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
# This is an app, never a crates.io crate — keep cargo publish/package out of the
# release path. release-plz still versions, changelogs, tags, and GitHub-releases.
publish = false

# Small, fully-static binaries that cross-compile cleanly (incl. i686-musl/iSH).
[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
